# shebot_nb2

./: .dockerignore  .env.prod.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.action  HELP.md  README.md  build_web.sh  docker-compose.yml.example  pyproject.toml  requirements.txt  run.py
.github/workflows/: docker-image  docker-image.yml
data/db/: QA.db  black.db  expedition.db  rssdata.db
data/service/: Aria2Download.json  Pixiv日榜.json  bilibili.json  broadcast.json  chooseone.json  ocr.json  rss.json  反撤回.json  反闪照.json  色图.json
data/templates/: HELP.html
disabled_plugins/nlcmd/: analyzer.py  handler.py
docs/: PLAN_IMAGE_STORAGE_REFACTOR.md  PLAYWRIGHT.md  REQUIREMENTS_SKILL_SYSTEM.md
hoshino/: __init__.py  config.py  event.py  glob.py  interact.py  log.py  message.py  permission.py  pluginconfig.py  res.py  rule.py  schedule.py  service.py  sres.py  typing.py
hoshino/base/: echo.py  help.py  interact_handle.py  listenmeta.py  ls.py  schedule_manage.py  test.py  var_replace.p  zai.py
hoshino/nlcmd/: __init__.py  analyzer.py  handler.py
hoshino/util/: __init__.py  handle_msg.py  message_util.py  pixiv.py  playwright_util.py  proxypool.py  sutil.py
res/creepthrow/: 1F2D34C2C238342646EFAC536321326D
res/db/: 1000（单表）.db3
res/wordle/: possible_words.txt
templates/: help.html
test/comfyui/: benchmark_txt2img.py  e2e_common.py  test_comfyui_workflows.py  test_e2e_qwen_image_edit.py  test_e2e_z_image_turbo.py
test/ptdownload/: test_audiences.py  test_mteam.py  test_tjupt.py
tests/: __init__.py  test_pixivrank.py  test_util.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  main.jsx
(+452 files in other folders)
