[project]
name = "shebot"
version = "0.1.0"
description = "shebot"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = ["nonebot2>=2.4.4", "nonebot-adapter-onebot>=2.4.6", "nonebot-plugin-apscheduler>=0.5.0", "nonebot_plugin_wordle>=0.4.5"]

[tool.nonebot]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
[tool.nonebot.plugins]
"@local" = []

nonebot_plugin_wordle = ["nonebot_plugin_wordle"]


[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]
