[project]
name = "shebot"
version = "0.1.0"
description = "shebot"
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "peewee>=3.14.0",
    "aiohttp>=3.7.3",
    "zhconv>=1.4.1",
    "requests>=2.25.1",
    "numpy>=1.20.1",
    "pillow>=11.0.0,<12",
    "lxml>=4.6.2",
    "feedparser>=6.0.2",
    "brotli>=1.0.9",
    "psutil>=5.8.0",
    "pyjwt>=2.1.0",
    "sqlitedict>=1.7.0",
    "fuzzywuzzy",
    "pytz",
    "nonebot2>=2.4.4", 
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi]",
    "nonebot-plugin-apscheduler>=0.5.0", 
    "nonebot_plugin_wordle>=0.4.5",
    "nonebot_plugin_handle>=0.4.4", 
    "nonebot-plugin-parser>=2.3.7", 
    # " nonebot_plugin_fortune>=0.4.12",
    # "nonebot_plugin_today_in_history>=0.1.6",
]

[tool.uv]
override-dependencies = [
    "pillow>=10.0.0,<11.0.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "aiofiles>=25.1.0",
    "httpx>=0.27.2,<1.0.0"
]

[tool.setuptools]
packages = []

[tool.nonebot.plugins]
nonebot-plugin-fortune = ["nonebot_plugin_fortune"]
